# videohosting

./: .env.example  .gitignore  .gitlab-ci.yml  docker-compose.yaml
backend/: .dockerignore  .env.example  .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/src/: alembic.ini  config.py  ioc.py  main.py
backend/src/application/: dto.py  events.py
backend/src/application/exceptions/: __init__.py  auth.py  base.py  infrastructure.py  not_found.py  permission.py  validation.py
backend/src/application/interactors/: auth.py  comments.py  likes.py  media.py  subscriptions.py
backend/src/application/interfaces/: __init__.py  gateways.py  id_provider.py  repositories.py  unit_of_work.py
backend/src/controllers/: auth.py  comments.py  dependencies.py  health.py  kafka_handlers.py  likes.py  media.py  subscriptions.py
backend/src/domain/: entities.py
backend/src/infrastructure/: gateways.py  id_provider.py  repositories.py  unit_of_work.py
backend/src/infrastructure/migrations/: env.py
backend/src/infrastructure/migrations/versions/: 2026_02_17_1914-c7950c756e30_.py
backend/src/infrastructure/models/: __init__.py  base.py  comment.py  history.py  like.py  subscription.py  user.py  video.py
backend/src/infrastructure/resources/: database.py  kafka.py  logging.py  redis.py
converter/: .dockerignore  .env.example  Dockerfile  pyproject.toml
converter/src/: config.py  ioc.py  main.py
converter/src/application/: events.py  interactors.py  interfaces.py
converter/src/controllers/: schemas.py  video.py
converter/src/infrastructure/: gateways.py  metrics.py
deploy/: compose.yml  infra.yml
frontend/: .env.example  .prettierrc  Caddyfile  Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/api/: types.ts
frontend/src/app/: main.tsx
frontend/src/assets/styles/: global.scss  variables.scss
frontend/src/components/AccountWidget/: AccountWidget.module.scss  AccountWidget.tsx
frontend/src/components/DropdownMenu/: DropdownMenu.module.scss  DropdownMenu.tsx
frontend/src/components/EditVideoModal/: EditVideoModal.module.scss  EditVideoModal.tsx
frontend/src/components/Header/: Header.module.scss  Header.tsx
frontend/src/components/InitializeApp/: InitializeApp.tsx
frontend/src/components/MainLayout/: MainLayout.module.scss  MainLayout.tsx
frontend/src/components/NotificationsWidget/: NotificationsWidget.module.scss  NotificationsWidget.tsx
frontend/src/components/ProtectionRoute/: ProtectionRoute.tsx
frontend/src/components/SubsAccWidget/: SubsAccWidget.module.scss  SubsAccWidget.tsx
frontend/src/components/UploadVideoForm/: UploadVideoForm.module.scss  UploadVideoForm.tsx
frontend/src/components/VideoCard/: VideoCard.module.scss  VideoCard.tsx
frontend/src/components/VideoPlayer/: VideoPlayer.tsx
frontend/src/hooks/: storeHooks.ts  useNotificationsWS.ts
frontend/src/pages/AuthPage/Login/: Login.module.scss  Login.tsx  LoginSteps.ts
frontend/src/pages/AuthPage/Reg/: Reg.module.scss  Reg.tsx  RegSteps.ts
frontend/src/pages/ChannelPage/: ChannelPage.module.scss  ChannelPage.tsx
frontend/src/pages/History/: History.module.scss  History.tsx
frontend/src/pages/MainPage/: MainPage.module.scss  MainPage.tsx
frontend/src/pages/MyVideos/: MyVideos.module.scss  MyVideos.tsx
frontend/src/pages/ProfilePage/: ProfileFieles.ts  ProfilePage.module.scss  ProfilePage.tsx
frontend/src/pages/SearchPage/: SearchPage.module.scss  SearchPage.tsx
frontend/src/pages/Subscriptions/: Subscriptions.module.scss  Subscriptions.tsx
frontend/src/pages/VideoPage/: Comments.module.scss  Comments.tsx  VideoInfo.module.scss  VideoInfo.tsx  VideoPage.module.scss  VideoPage.tsx
frontend/src/store/: store.ts
frontend/src/store/api/: api.ts  auth.api.ts  comment.api.ts  like.api.ts  notifications.api.ts  subscription.api.ts  video.api.ts
frontend/src/store/auth/: auth.slice.ts
frontend/src/types/: auth.types.ts
frontend/src/ui/BaseInput/: BaseInput.module.scss  BaseInput.tsx
frontend/src/ui/Button/: Button.module.scss  Button.tsx
frontend/src/ui/SearchBar/: SearchBar.module.scss  SearchBar.tsx
frontend/src/utils/: format.ts  prepareHeaders.ts  validation.ts
monitoring/: TODO.txt
monitoring/alertmanager/: alertmanager.yml.tpl
monitoring/alertmanager/templates/: telegram.tmpl
monitoring/alloy/: config.alloy
monitoring/grafana/provisioning/dashboards/: content.json  converter.json  dashboard.yaml  http_metrics.json  users.json  videos.json
monitoring/grafana/provisioning/datasources/: loki.yaml  postgres.yaml  prometheus.yaml
monitoring/loki/: config.yaml
monitoring/prometheus/: prometheus.yml  rules.yml
notifications/: .env.example  pyproject.toml
notifications/src/: alembic.ini  config.py  ioc.py  main.py
notifications/src/application/: commands.py  dto.py  events.py  exceptions.py  interfaces.py  queries.py
notifications/src/controllers/: dependencies.py  handlers.py  notifications.py  schemas.py  ws.py
notifications/src/infrastructure/: gateways.py  id_provider.py  repositories.py
notifications/src/infrastructure/migrations/: env.py
notifications/src/infrastructure/migrations/versions/: 2026_02_22_1354-4ebdf348f456_.py  2026_04_11_1500-add_notification_events_.py
notifications/src/infrastructure/models/: __init__.py  notification_event.py
notifications/src/infrastructure/resources/: database.py  metrics.py
storage/localstack/: setup.py
storage/postgres/: init.sql
